--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,6 +1,11 @@
 title = "Deque"
 gitSourceBranch = "main"
 
+apiCategories = [
+	"Constructors",
+	"Methods"
+]
+
 [home]
 enabled = false
 includeReadme = true
